# alchemer-sync

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
.trunk/: trunk.yaml
alchemer_sync/: alchemer.py  extract.py  options.toml  update_options.py
docs/: index.md
src/alchemer_sync/: extract.py  update_options.py
tests/: test_alchemer_sync.py
