[project]
name = "alchemer-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
license-expression = "MIT"
dependencies = [
    "google-cloud-storage>=1.42.3",
    "python-dateutil>=2.8.2",
    "alchemer>=0.5.4",
    "setuptools>=60.10.0",
]
requires-python = ">=3.9,<4.0"

[project.urls]
Homepage = ""

[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "black",
    "flake8>=4.0.1",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
extract.cmd = "python alchemer_sync/extract.py"
extract.env_file = ".env"