[project]
name = ""
version = ""
description = ""
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
dependencies = [
  "google-cloud-storage>=2.5.0",
  "python-dateutil>=2.8.2",
  "alchemer>=0.5.4",
  "tomli>=2.0.1",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
extract = { cmd = "python alchemer_sync/extract.py" }
post_lock = { shell = "pdm export -f requirements > requirements.txt" }
